--- a/styles.scss
+++ b/styles.scss
@@ -30,6 +30,7 @@ html {
     font-family: 'Pragati Narrow', sans-serif;
     svg {
       display: block;
+      margin: -1px;
     }
     .head-section {
       background-color: $main-green;
@@ -135,7 +136,6 @@ html {
               background-color: $yellow;
               padding: 0.1em 0.5em;
               margin: 0.2em;
-              color: $off-white;
               text-transform: uppercase;
               font-weight: bold;
               font-family: inherit;
@@ -144,7 +144,7 @@ html {
               border-radius: 5px;
               a {
                 text-decoration: none;
-                color: $off-white;
+                color: $off-black;
               }
             }
           }
@@ -188,7 +188,7 @@ html {
         background-color: $yellow;
         padding: 0 1.1em;
         margin-bottom: 1.5em;
-        color: $off-white;
+        color: $off-black;
         border-radius: 10px;
         p {
           font-size: 1.1em;
@@ -313,6 +313,9 @@ html {
         font-size: 7.5vw;
         margin: 0 1em 0.2em 1em;
         line-height: 0.7em;
+      }
+      a:hover {
+        color: $yellow;
       }
       .contact-text {
         text-align: center;
@@ -550,7 +553,6 @@ html {
                 border: none;
                 a {
                   text-decoration: none;
-                  color: $off-white;
                 }
               }
             }
@@ -581,7 +583,6 @@ html {
           background-color: $yellow;
           padding: 0 1.1em;
           margin-bottom: 1.5em;
-          color: $off-white;
           border-radius: 10px;
           p {
             font-size: calc(5px + 1vw);
@@ -676,7 +677,6 @@ html {
           font-size: $section-title-desktop;
         }
         a {
-          color: $yellow;
           font-size: calc(5px + 2.5vw);
           margin: 0 1em 0.2em 1em;
           line-height: 0.7em;
