--- a/styles.scss
+++ b/styles.scss
@@ -30,7 +30,9 @@ html {
     font-family: 'Pragati Narrow', sans-serif;
     svg {
       display: block;
-      margin: -1px 0;
+      margin: -1px;
+      padding: 0;
+      width: 100%;
     }
     .head-section {
       background-color: $main-green;
