--- a/styles.css
+++ b/styles.css
@@ -15,8 +15,9 @@ html body {
 
 html body svg {
   display: block;
-  margin: -1px;
+  margin: -1px 0;
   padding: 0;
+  width: 100%;
 }
 
 html body .head-section {
