changed viewbox width of svg wave

--- a/styles.css
+++ b/styles.css
@@ -428,6 +428,7 @@ html body .contact-section {
           align-items: center;
   width: 90%;
   margin: 1.5em auto;
+  padding-bottom: 1em;
 }
 
 html body .contact-section h2 {
