--- a/styles.scss
+++ b/styles.scss
@@ -303,6 +303,7 @@ html {
       align-items: center;
       width: $edge-width;
       margin: $section-margin;
+      padding-bottom: 1em;
       h2 {
         font-size: $section-title;
         margin: 0;
