--- a/styles.scss
+++ b/styles.scss
@@ -30,7 +30,7 @@ html {
     font-family: 'Pragati Narrow', sans-serif;
     svg {
       display: block;
-      margin: -1px 0;
+      margin: -1px 0 -1px -1px;
       padding: 0;
     }
     .head-section {
