added hamburger colour change functionality

--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,7 @@ html body .head-section nav .menu-slider {
 }
 
 html body .head-section nav .hamburger-button {
-  position: absolute;
+  position: fixed;
   z-index: 10;
   top: 7px;
   right: 3vw;
