removed changing hamburger colour

--- a/styles.scss
+++ b/styles.scss
@@ -71,7 +71,7 @@ html {
           opacity: 0;
         }
         .hamburger-button {
-          position: fixed;
+          position: absolute;
           z-index: 10;
           top: 7px;
           right: 3vw;
